--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -48,10 +48,15 @@ layout: default
         {{ content }}
 
         {% if page.citation and page.paperurl %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
-        {% elsif page.citation %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }} </p>
-        {% endif %}
+  <p style="font-size: smaller">
+    Recommended citation: {{ page.citation }} 
+    <a href="{{ page.paperurl }}" target="_blank" rel="noopener">Access here</a>
+  </p>
+{% elsif page.citation %}
+  <p style="font-size: smaller">Recommended citation: {{ page.citation }} </p>
+{% elsif page.paperurl %}
+  <p><a href="{{ page.paperurl }}" target="_blank" rel="noopener">Access here</a></p>
+{% endif %}
 
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
