--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,7 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+@import "minimal-mistakes/skins/default"; /* or your chosen skin */
+@import "minimal-mistakes";
+@import "custom";
