--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -73,8 +73,7 @@
   display: table-cell;
   vertical-align: top;
   width: 300px;
-  // set width only, for non-square avatars
-  // height: 50px;
+  height: 100px;
 
   @include breakpoint($large) {
     display: block;
@@ -84,7 +83,7 @@
 
   img {
     max-width: 300px;
-    border-radius: 50%;
+    border-radius: 100%;
 
     @include breakpoint($large) {
       padding: 5px;
